--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "copy404": "cp 404.html dist/404.html",
+  "predeploy": "npm run build && npm run copy404",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "pinyin": "^4.0.0",
