--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "pinyin": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
